# figtreemap

./: .gitignore  .nojekyll  README.md  _quarto.yml  demo.py  demo_save_svgs.py  guide.html  guide.qmd  index.html  index.qmd  noxfile.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: publish.yml  python-publish.yml
_site/docs/: guide.html  index.html
docs/: _sidebar.yml  api_index.html  custom.scss  guide.html  image_prep.html  index.html  index.qmd  phylopics.html  squarify_images.html
site_libs/bootstrap/: bootstrap-c7b105a5ee66583102d1a0fb0b699722.min.css  bootstrap-d4833ad07146d06c3a49bda4c50b9631.min.css  bootstrap-eb5b5cd6e820e93f180867240b29773e.min.css
src/figtreemap/: __init__.py  image_prep.py  phylopics.py  squarify_images.py
src/phylopictreemap/: image_prep.py  phylopics.py  squarify_images.py
tests/: test_image_prep.py  test_phylopics.py  test_squarify_images.py
