[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figtreemap"
version = "0.1.0"
authors = [
  { name = "DAWells"},
]
description = "Plot treemaps with figures and phylopics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests",
  "lxml",
  "numpy",
  "cairosvg",
  "Pillow",
  "matplotlib",
  "squarify",
  "ratelimit",
  "opentree"
]
[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
  "pytest-mock",
]
dev = [
  { include-group = "test"},
  "ruff",
  "mypy"
]
[project.urls]
Homepage = "https://github.com/Quantitative-Omics-Research/figtreemap"
"Bug Tracker" = "https://github.com/Quantitative-Omics-Research/figtreemap/issues"
